Fix overflowing field width

--- a/app/assets/stylesheets/new-product.css
+++ b/app/assets/stylesheets/new-product.css
@@ -1,10 +1,12 @@
 #product-form-container {
   height: calc(100vh - 63px);
+  width: 100%;
   background-color: #243e2e;
 }
 
 #product-form-container form {
   padding: 0 20px 20px 20px;
+  max-width: 400px;
 }
 
 #product-form-container form div {
@@ -55,8 +57,8 @@ select {
 }
 
 #menu_menu_images {
-  color: #deb35b;
   height: 30px;
+  width: 100%;
   box-sizing: border-box;
 }
 
@@ -71,7 +73,6 @@ select {
   color: #a94c2e;
   padding: 3px 5px 2px 5px;
   height: 30px;
-  width: 138px;
   outline: none;
   white-space: nowrap;
   -webkit-user-select: none;
